[package]
name = "bloom"
version = "0.2.0"
authors = ["Maxim Molchanov <m.molchanov@vonmo.com>"]
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
name = "bloom"
crate-type = ["dylib"]

[dependencies]
bincode = "1.3.3"
rustler = {git = "https://github.com/rusterlium/rustler.git", branch="master"}
bloomfilter = "1.0.13"
siphasher = "1.0.0"
serde = { version = "1.0.200", features = ["derive"] }
